tests/pass/BOR.java
package pass;

public class BOR {

	public int or(int x, int y) {
		return x | y;
	}
	
}
