tests/fail/BOR.java
package fail;

public class BOR {
	public static void main(String[] args) {
		System.out.println(true | 10);
	}
}
